--- a/app/views/schedulers/edit.html.erb
+++ b/app/views/schedulers/edit.html.erb
@@ -1,8 +1,8 @@
  <h3>スケジュール編集</h3>
  <div class="schedule_sub">
- <%= render "shared/error", obj: @user %> 
+ <%= render "shared/error", obj: @scheduler %> 
 
-<%= form_with model: @user do |f| %>
+<%= form_with model: @scheduler do |f| %>
   <table>
     <tr>
       <th><%= f.label :title ,"タイトル" %></th>
@@ -30,7 +30,7 @@
 
     <ul>
       <li><%= f.submit "編集を完了し保存する" %></li>
-      <li><%= link_to "キャンセル", :users %></li>
+      <li><%= link_to "キャンセル", :schedulers %></li>
     </ul>
 <% end %>
 </div>
