--- a/app/views/schedulers/show.html.erb
+++ b/app/views/schedulers/show.html.erb
@@ -5,33 +5,33 @@
 <table>
   <tr>
     <th class="th_width">タイトル</th>
-    <td><%= @user.title %></td>
+    <td><%= @scheduler.title %></td>
   </tr>
   <tr>
     <th class="th_width">開始日</th>
-    <td><%= @user.startday.strftime("%Y/%m/%d") %></td>
+    <td><%= @scheduler.startday.strftime("%Y/%m/%d") %></td>
   </tr>
   <tr>
     <th class="th_width">終了日</th>
-    <td><%= @user.endday.strftime("%Y/%m/%d")  %></td>
+    <td><%= @scheduler.endday.strftime("%Y/%m/%d")  %></td>
   </tr>
   <tr>
     <th>終日</th>
       <td>
-      <% if @user.allday == "1" %>○
+      <% if @scheduler.allday == "1" %>○
       <% end%></td>
   </tr>
   <tr>
     <th class="th_width">詳細</th>
-    <td><%= @user.detail %></td>
+    <td><%= @scheduler.detail %></td>
     </tr>
 </table>
 </div>
 
 <div>
   <ul>
-    <li><%= link_to "編集", edit_user_path(id:@user.id) %></li>
-    <li><%= link_to "ユーザー情報一覧に戻る", :users %></li>
+    <li><%= link_to "編集", edit_scheduler_path(id:@scheduler.id) %></li>
+    <li><%= link_to "ユーザー情報一覧に戻る", :schedulers %></li>
   </ul>
 </div>
 </div>
